# ms-interface-lib

./: README.md  setup.cfg  setup.py
demo-app/db_CONN-demo/: README.md  demo-db_conn-load-data.ipynb  requirements.txt
demo-app/db_CONN-demo/data/: sample_lab_measurement.csv
demo-app/db_CONN-demo/microsrv_interface/: __init__.py  comm_interface.py
dev-app/: .env  Dockerfile  _portainer_params.env  docker-compose.comm-interface-hosts.yml  docker-compose.yml
dev-app/app/: async-comm-template.py  requirements.txt
dev-app/ms-interface-lib/: pyproject.toml
dev-app/ms-interface-lib/microsrv_interface/: comm_interface.py
microsrv_interface/: comm_interface.py
